# trake

./: Cargo.toml  trake.js  trake.wasm
.github/workflows/: deploy.yml
assets/: config.ron  config.toml  palette.toml
assets/shaders/: background.glsl  ellipse.glsl  particles.glsl
crates/trake_derive/: Cargo.toml
crates/trake_derive/src/: enum_field.rs  lib.rs
dev/: index.html  trake.js  trake.wasm
dev/assets/: controls.ron
dev/assets/shaders/: masked.glsl
src/: main.rs  prelude.rs
src/assets/: mod.rs  palette.rs
src/context/: mod.rs  music.rs
src/game/: actions.rs  mod.rs  ui.rs
src/menu/: loading.rs
src/model/: config.rs  mod.rs  particles.rs  train.rs  types.rs
src/model/collider/: mod.rs  shape.rs
src/model/logic/: actions.rs  generation.rs  mod.rs
src/render/: mod.rs  util.rs
src/render/game/: mod.rs  ui.rs
src/ui/: context.rs  layout.rs  mod.rs
src/ui/geometry/: mod.rs
src/ui/widget/: button.rs  icon.rs  mod.rs  text.rs
src/util/: mod.rs
